--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Platform</title>
+    <title>Jobs Here</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo.png" alt="Logo">
+            <img src="logo-purple.png" alt="Logo">
         </div>
         <div class="menu">
             <a href="#" class="login">
@@ -41,8 +41,8 @@
     <footer>
         <div class="footer-container">
           <div class="column-1">
-            <h2>Job Platform</h2>
-            <p>Copyright 2023 Job Platform</p>
+            <h2>JobsHere</h2>
+            <p>Copyright 2023 JobsHere</p>
           </div>
           <div class="column-2">
             <div class="sub-column">
