--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jobs Here</title>
+    <title>JobsHERE</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="init.js"></script>
     <script src="index.js" defer></script>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="logo-purple.png" alt="Logo">
-        </div>
-        <div class="menu">
-            <a href="#" class="login">
-                <i class="fas fa-user"></i> Login
-            </a>
-            <button class="hamburger" aria-label="menu">
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
-    </header>
+    <div id="header-placeholder"></div>
     <main>
+      <div class="view" id="main-view">
         <h1>Search for jobs</h1>
         <section class="search-section">
             <form class="search-form" id="search-form-1">
@@ -37,49 +27,8 @@
             <div id="search-results"></div>
           </div>
         </section>
+      </div>
     </main>
-    <footer>
-        <div class="footer-container">
-          <div class="column-1">
-            <h2>JobsHere</h2>
-            <p>Copyright 2023 JobsHere</p>
-          </div>
-          <div class="column-2">
-            <div class="sub-column">
-              <h3>About</h3>
-              <ul>
-                <li><a href="#">Our Story</a></li>
-                <li><a href="#">Our Team</a></li>
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-            </div>
-            <div class="sub-column">
-              <h3>Privacy Policy</h3>
-              <ul>
-                <li><a href="#">Cookie Policy</a></li>
-                <li><a href="#">Data Protection</a></li>
-                <li><a href="#">Terms of Use</a></li>
-              </ul>
-            </div>
-            <div class="sub-column">
-              <h3>Terms of Service</h3>
-              <ul>
-                <li><a href="#">User Agreement</a></li>
-                <li><a href="#">Disclaimer</a></li>
-                <li><a href="#">Warranty Disclaimer</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="column-3">
-            <h3>Follow Us</h3>
-            <ul>
-              <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
-              <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-              <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-              <li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-            </ul>
-          </div>
-        </div>
-    </footer>
+    <div id="footer-placeholder"></div>
 </body>
 </html>
